@@ -15,22 +15,14 @@
 
 package com.liferay.poshi.ide.ui.launch;
 
-import java.io.FileNotFoundException;
-
 import org.eclipse.core.resources.IFile;
-import org.eclipse.core.runtime.CoreException;
-import org.eclipse.core.runtime.IPath;
 import org.eclipse.debug.ui.ILaunchShortcut;
 import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.ui.IEditorPart;
 import org.eclipse.ui.part.FileEditorInput;
-import org.w3c.dom.Attr;
-import org.w3c.dom.Element;
-import org.w3c.dom.Text;
 
-import com.liferay.poshi.ide.core.PoshiLaunchHelper;
-import com.liferay.poshi.ide.ui.PoshiUI;
+import com.liferay.poshi.ide.ui.util.LaunchUtil;
 
 /**
  * @author Terry Jia
@@ -40,40 +32,6 @@ public class BaseLaunchShortcut implements ILaunchShortcut
 
     protected String buildXmlFile = "";
     protected String target = "";
-
-    protected String getCommandName( Object o )
-    {
-        if( o instanceof Attr )
-        {
-            return getCommandName( ( (Attr) o ).getOwnerElement() );
-        }
-        else if( o instanceof Element )
-        {
-            Element e = (Element) o;
-            String nodeName = e.getNodeName();
-
-            if( nodeName.equals( "command" ) )
-            {
-                return e.getAttribute( "name" );
-            }
-            else if( nodeName.equals( "definition" ) )
-            {
-                return "";
-            }
-            else
-            {
-                return getCommandName( e.getParentNode() );
-            }
-        }
-        else if( o instanceof Text )
-        {
-            return getCommandName( ( (Text) o ).getParentNode() );
-        }
-        else
-        {
-            return "";
-        }
-    }
 
     @Override
     public void launch( ISelection selection, String mode )
@@ -93,7 +51,7 @@ public class BaseLaunchShortcut implements ILaunchShortcut
             sb.append( "-Dtest.class=" );
             sb.append( fileName );
 
-            launchFile( file, sb.toString() );
+            LaunchUtil.launchFile( file, buildXmlFile, target, sb.toString() );
         }
     }
 
@@ -113,7 +71,7 @@ public class BaseLaunchShortcut implements ILaunchShortcut
 
         Object e = selection.getFirstElement();
 
-        String commandName = getCommandName( e );
+        String commandName = LaunchUtil.getCommandName( e );
 
         StringBuffer sb = new StringBuffer();
 
@@ -126,41 +84,7 @@ public class BaseLaunchShortcut implements ILaunchShortcut
             sb.append( commandName );
         }
 
-        launchFile( file, sb.toString() );
-    }
-
-    protected void launchFile( IFile file, String argument )
-    {
-        IPath portalPath = file.getProject().getLocation().removeLastSegments( 6 );
-
-        IPath runXmlPath = portalPath.append( buildXmlFile );
-
-        if( runXmlPath.toFile().exists() )
-        {
-            PoshiLaunchHelper helper = new PoshiLaunchHelper();
-
-            helper.setVMArgs( new String[] { "-XX:MaxPermSize=256m", "-Xms256m" } );
-
-            try
-            {
-                helper.runTarget( runXmlPath, target, argument, true, portalPath.toPortableString() );
-            }
-            catch( CoreException e )
-            {
-                PoshiUI.logError( e );
-            }
-        }
-        else
-        {
-            try
-            {
-                throw new FileNotFoundException();
-            }
-            catch( FileNotFoundException e )
-            {
-                PoshiUI.logError( "Can't find build file at:" + runXmlPath.toPortableString(), e );
-            }
-        }
+        LaunchUtil.launchFile( file, buildXmlFile, target, sb.toString() );
     }
 
 }
